hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics6.php.like_types.exp
File "tconst_on_generics6.php", line 43, characters 19-20:
Invalid argument (Typing[4110])
File "tconst_on_generics6.php", line 30, characters 59-60:
Expected ~[unresolved] because it is an unenforceable type
File "tconst_on_generics6.php", line 39, characters 12-20:
But got StringBox
File "tconst_on_generics6.php", line 44, characters 20-21:
Invalid argument (Typing[4110])
File "tconst_on_generics6.php", line 30, characters 59-60:
Expected ~[unresolved] because it is an unenforceable type
File "tconst_on_generics6.php", line 38, characters 26-28:
But got Box
